# hnsm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  katex-header.html  release.toml  rust-toolchain.toml
.github/workflows/: build.yml  codecov.yml  publish.yml
benches/: hd.rs  jaccard.rs  simd.rs
doc/: CHAIN_PLAN.md  NTSYNT_PLAN.md  SYNT.md  SYNT_PLAN.md
doc/benchmark/: fasta.md  index.md
src/: fasr.rs  hnsm.rs  lib.rs  pgr.rs
src/cmd/: chain.rs  cluster.rs  convert.rs  count.rs  das.rs  dedup.rs  dist.rs  distance.rs  distk.rs  filter.rs  fq2fa.rs  gz.rs  hv.rs  interleave.rs  manifold.rs  mask.rs  masked.rs  mod.rs  n50.rs  one.rs  order.rs  prefilter.rs  range.rs  rc.rs  replace.rs  similarity.rs  sixframe.rs  size.rs  sketch.rs  some.rs  split.rs  synteny.rs
src/cmd/clust/: cc.rs  dbscan.rs  kmedoids.rs  mcl.rs  mod.rs
src/cmd/gff/: mod.rs  rg.rs
src/cmd/mat/: compare.rs  format.rs  mod.rs  pair.rs  phylip.rs  subset.rs
src/cmd/synt/: circle.rs  dag.rs  das.rs  dna.rs  merge.rs  mmg.rs  mod.rs  ribbon.rs  view.rs
src/cmd_fasr/: axt2fas.rs  check.rs  concat.rs  consensus.rs  cover.rs  create.rs  filter.rs  join.rs  link.rs  maf2fas.rs  name.rs  pl_p2m.rs  refine.rs  replace.rs  separate.rs  slice.rs  split.rs  stat.rs  subset.rs  variation.rs  xlsx.rs
src/cmd_pgr/: chain.rs  ir.rs  mod.rs  rept.rs  trf.rs
src/libs/: alignment.rs  bloom.rs  dbscan.rs  fas.rs  hash.rs  hv.rs  index.rs  io.rs  kmedoids.rs  linalg.rs  loc.rs  matrix.rs  mcl.rs  mds.rs  mod.rs  nt.rs
src/libs/synteny/: algo.rs  block.rs  chain.rs  graph.rs  io.rs  mod.rs  tests.rs
tests/: cli.rs  cli_clust.rs  cli_clustering.rs  cli_dist.rs  cli_fasr.rs  cli_fasr_vars.rs  cli_fasta.rs  cli_fastq.rs  cli_gff.rs  cli_index.rs  cli_mat.rs  cli_synt.rs  test_synteny.fa  test_synteny_2.fa  test_synteny_3.fa
tests/clust/: 3300030246.fna.gz.gzi  APH(3')-IIIa.fa  IBPA.fa  IBPA.fa.05.tsv  IBPA.lt.mat  SRR6323163.fa.gz.gzi  SRR6323163.fa.gz.loc  acrB.fa  mcl_complex.tsv  mcl_test.tsv
tests/fasr/: NC_000932.fa.loc  genome.fa.loc
tests/fasta/: IBPA.fa  IBPA.fa.sim  IBPA.fa.tsv  dedup.fa  filter.fa  list.txt  mask.json  replace.tsv  trans.fa  trans.fa.loc
tests/genome/: mg1655.pro.fa.gz.gzi  small_1.fa
tests/gff_rg/: test.gff
tests/index/: final.contigs.fa  final.contigs.fa.fai  final.contigs.fa.gz.fai  final.contigs.fa.gz.gzi  final.contigs.fa.gz.loc  sample.rg
tests/pgr/: lastz.psl  mg1655.fa.gz.gzi  mg1655.ir.json  mg1655.rept.json  mg1655.rm.gff  mg1655.rm.json  mg1655.trf.json  sakai.fa.gz.gzi  sakai.fa.gz.loc
tests/synt/: small_1_2.tsv  small_1_2_500.tsv
