[package]
name = "hnsm"
version = "0.3.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
description = "Homogeneous Nucleic acids/amino acids Smart Matching"
documentation = "https://github.com/wang-q/hnsm"
readme = "README.md"
homepage = "https://github.com/wang-q/hnsm"
repository = "https://github.com/wang-q/hnsm"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
anyhow = "1.0.93"
regex = "1.11.1"
lazy_static = "1.5.0"
itertools = "0.13.0"

flate2 = "1.0.35"

crossbeam = "0.8.4"
rayon = "1.10.0"

intspan = "0.8.4"
noodles = { version = "0.88.0", features = ["core", "fasta", "fastq", "bgzf"] }
noodles-core = "0.16.0"
noodles-fasta = "0.47.0"
noodles-fastq = "0.17.0"
noodles-bgzf = "0.35.0"

# data structure
petgraph = "0.6.5"
indexmap = "2.7.0"
lru = "0.12.5"

# hashing
num-traits = "0.2.19"
fxhash = "0.2.1"
murmurhash3 = "0.0.5"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
rapidhash = { version = "1.3.0", features = ["rng"] }
rand = { version = "0.8.5" }
minimizer-iter = "1.2.1"

# math
#faer = { version = "0.20.2", features = ["rand"] }
pcoa = "0.1.2"
nalgebra = "0.33.2"

which = "7.0.0"
tempfile = "3.14.0"

# fasr
rust_xlsxwriter = "0.80.0"
calamine = "0.26.1"
bio = "0.30.1"
cmd_lib = "1.9.4"

[[bin]]
name = "hnsm"
path = "src/hnsm.rs"

[[bin]]
name = "fasr"
path = "src/fasr.rs"

[[bin]]
name = "pgr"
path = "src/pgr.rs"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
approx = "0.5.1"
criterion = "0.5.1"
rand = { version = "0.8.5", features = ["small_rng"] }

# jaccard
nohash-hasher = "0.2.0"
tinyset = { version = "0.5.1", default-features = false }
rapidhash = { version = "1.3.0", features = ["rng"] }

# hd
wyhash = "0.5.0"

[[bench]]
name = "simd"
harness = false # Allows Criterion to control the benchmarking process

[[bench]]
name = "jaccard"
harness = false

[[bench]]
name = "hd"
harness = false

[profile.release]
lto = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
